Change the CSS to fix some display problems
- Have the section title stay visible always
- have a clicked link appear in full
- only scroll the sect2 and below (use overflow: auto so that falkon
  does not display scrollbars when not needed)
- remove the footer that is not needed since we have the header

--- a/stylesheets/lfs-xsl/lfs.css
+++ b/stylesheets/lfs-xsl/lfs.css
@@ -38,10 +38,42 @@ div.dedication {
   padding-left: 1em;
 }
 
+/* Sect1: must stay when scrolling, so "fixed". The navheader
+   is higher for sect1 and chapter, so change top position.*/
+h1.sect1,  h1.chapter {
+  top: 3.5em;
+}
+h1.preface, h1.part, h1.appendix, .glossary h1, .index h1 {
+  top: 2.5em;
+}
+h1.sect1, h1.preface, h1.part, h1.chapter, h1.appendix, .glossary h1, .index h1 {
+  background: #f5f6f7;
+  border-bottom: .1em solid #dbddec;
+  padding: .2em 0;
+  margin-left: -.1em;
+  height: 1em;
+  width: 100%;
+  position: fixed;
+  left:0;
+  right:0;
+  bottom: auto;
+}
 
-/* Sections */
-div.sect1, div.appendix {
+/* Scrolling parts */
+div.sect1, div.chapter {
+  top: 9.5em;
+}
+div.appendix, div.preface, div.part, div.glossary, .index div.index {
+  top: 8.5em;
+}
+div.sect1, div.appendix, div.preface, div.part, div.chapter, div.glossary, .index div.index {
   padding-left: .3em;
+  overflow:auto;
+  height: auto;
+  position: fixed;
+  left:0;
+  right:0;
+  bottom: 0;
 }
 
 .package, .kernel, .installation, .commands, .testing, .configuration, .content {
@@ -68,7 +100,6 @@ div.sect1, div.appendix {
   margin-bottom: 0;
 }
 
-
 /* Headers */
 h1, h2, h3, h4, h5, h6, b, .strong {
   color: #000;
@@ -84,18 +115,6 @@ h1 {
 .book h1 {
   margin: 0;
   padding: 0.4em;
-}
-
-.preface h1, .part h1, .chapter h1, .appendix h1, .index h1, .sect1 h1, .glossary h1 {
-  background: #f5f6f7;
-  border-bottom: .1em solid #dbddec;
-  margin-bottom: 1em;
-  margin-top: 0;
-  padding: .4em;
-}
-
-.sect1 h1, .appendix h1 {
-  margin-left: -.2em;
 }
 
 .wrap h1 {
@@ -146,14 +165,21 @@ div.navheader, div.navfooter {
   padding: 0.1em .5em;
 }
 
+/* Navigation window on top: fixed. Height is relative to
+   default font size. The 7.3em is obtained by trial and error.*/
 div.navheader {
   border-bottom: 1px solid #dbddec;
-   position: sticky;
-   top: 0;
+  position: fixed;
+  top: 0;
+  left:0;
+  right:0;
+  bottom:auto;
+  height:7.3em
 }
 
+/* no need for a footer now that the header is always visible */
 div.navfooter {
-  border-top: 1px solid #dbddec;
+  display:none;
 }
 
 div.navheader h4 {
